[package]
name = "rustfully-syndicated"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-macros = "0.5.0"
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["http2", "json"] }
rss = "2.0.12"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
tokio = { version = "1.47.1", features = ["full"] }
